[gd_scene load_steps=22 format=2]

[ext_resource path="res://src/Levels/CentralWhite/iceblock.png" type="Texture" id=1]
[ext_resource path="res://src/Levels/CentralWhite/WallOfIce.gd" type="Script" id=2]
[ext_resource path="res://src/Effects/Textures/explosion.png" type="Texture" id=3]
[ext_resource path="res://src/Effects/Materials/iceblock_explosion_mat.tres" type="Material" id=4]
[ext_resource path="res://src/Effects/Materials/iceblock_shatter_mat.tres" type="Material" id=5]
[ext_resource path="res://src/Actors/Bosses/AvalancheYeti/ice_remains.png" type="Texture" id=6]
[ext_resource path="res://src/Sounds/Ice Break.wav" type="AudioStream" id=7]
[ext_resource path="res://src/Sounds/MMX - Enemy Helmet Hit.ogg" type="AudioStream" id=8]
[ext_resource path="res://src/Actors/Enemies/EnemyShield.gd" type="Script" id=9]
[ext_resource path="res://src/Effects/Materials/ice_sparkles_block_mat.tres" type="Material" id=10]
[ext_resource path="res://src/Effects/Textures/snow_sparkle.png" type="Texture" id=11]
[ext_resource path="res://src/Levels/CentralWhite/target_attractor.gd" type="Script" id=12]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 56, 58 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ SubResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 26, 73 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 131, 92 )

[sub_resource type="CanvasItemMaterial" id=5]
particles_animation = true
particles_anim_h_frames = 4
particles_anim_v_frames = 4
particles_anim_loop = false

[sub_resource type="CanvasItemMaterial" id=6]
render_priority = -1
particles_animation = true
particles_anim_h_frames = 3
particles_anim_v_frames = 2
particles_anim_loop = false

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 24.625, 69.1875 )

[sub_resource type="CanvasItemMaterial" id=8]
particles_animation = true
particles_anim_h_frames = 3
particles_anim_v_frames = 2
particles_anim_loop = false

[sub_resource type="RectangleShape2D" id=9]

[node name="WallOfIce" type="Node2D"]
script = ExtResource( 2 )

[node name="animatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )

[node name="animatedSprite2" type="AnimatedSprite" parent="."]
position = Vector2( 0, -50 )
frames = SubResource( 2 )

[node name="animatedSprite3" type="AnimatedSprite" parent="."]
position = Vector2( 0, -100 )
frames = SubResource( 2 )

[node name="staticBody2D" type="StaticBody2D" parent="."]
visible = false
collision_layer = 256
collision_mask = 0

[node name="collisionShape2D" type="CollisionShape2D" parent="staticBody2D"]
position = Vector2( 0, -46 )
shape = SubResource( 3 )

[node name="area2D" type="Area2D" parent="."]
modulate = Color( 0.0313726, 1, 0, 1 )
collision_layer = 0
collision_mask = 6

[node name="collisionShape2D" type="CollisionShape2D" parent="area2D"]
position = Vector2( 79, -65 )
shape = SubResource( 4 )

[node name="Explosion Particles" type="Particles2D" parent="."]
material = SubResource( 5 )
position = Vector2( -1, -35 )
z_index = 5
z_as_relative = false
emitting = false
amount = 25
lifetime = 2.0
local_coords = false
process_material = ExtResource( 4 )
texture = ExtResource( 3 )

[node name="remains_particles" type="Particles2D" parent="."]
material = SubResource( 6 )
position = Vector2( 0, -46 )
emitting = false
amount = 24
lifetime = 2.0
one_shot = true
explosiveness = 1.0
visibility_rect = Rect2( -600, -100, 1200, 200 )
process_material = ExtResource( 5 )
texture = ExtResource( 6 )

[node name="icebreak" type="AudioStreamPlayer2D" parent="."]
pause_mode = 2
stream = ExtResource( 7 )
volume_db = -12.671
pitch_scale = 0.77
max_distance = 800.0
bus = "SFX"

[node name="EnemyShield" type="Node2D" parent="."]
script = ExtResource( 9 )
breakable = false

[node name="hittable_area" type="Area2D" parent="EnemyShield"]
collision_layer = 0
collision_mask = 6
input_pickable = false

[node name="collisionShape2D" type="CollisionShape2D" parent="EnemyShield/hittable_area"]
position = Vector2( -0.375, -48.8125 )
shape = SubResource( 7 )

[node name="hitSound" type="AudioStreamPlayer2D" parent="EnemyShield"]
stream = ExtResource( 8 )
volume_db = -6.832
max_distance = 1200.0
attenuation = 1e-05
bus = "SFX"

[node name="particles2D" type="Particles2D" parent="."]
material = SubResource( 8 )
position = Vector2( 0, -49 )
lifetime = 0.5
explosiveness = 0.25
local_coords = false
process_material = ExtResource( 10 )
texture = ExtResource( 11 )

[node name="target_attractor" type="StaticBody2D" parent="."]
position = Vector2( 0, -48 )
collision_layer = 8388608
collision_mask = 0
script = ExtResource( 12 )

[node name="collisionShape2D" type="CollisionShape2D" parent="target_attractor"]
shape = SubResource( 9 )

[connection signal="body_entered" from="area2D" to="." method="_on_area2D_body_entered"]
[connection signal="body_exited" from="area2D" to="." method="_on_area2D_body_exited"]
